--- a/KamilaApi/Properties/launchSettings.json
+++ b/KamilaApi/Properties/launchSettings.json
@@ -12,7 +12,8 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/cliente",
+      "launchUrl": "swagger",
+      //"launchUrl": "api/cliente",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +21,8 @@
     "KamilaApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/cliente",
+      "launchUrl": "swagger",
+      //"launchUrl": "api/cliente",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
